--- a/SkEditorPlus/Languages/Chinese.xaml
+++ b/SkEditorPlus/Languages/Chinese.xaml
@@ -9,6 +9,7 @@
     <system:String x:Key="MenuEdit">编辑</system:String>
     <system:String x:Key="MenuOther">其他</system:String>
     <system:String x:Key="MenuProject">项目</system:String>
+    <system:String x:Key="MenuStructure">结构</system:String>
 
     <system:String x:Key="MenuFileNew">新建</system:String>
     <system:String x:Key="MenuFileOpen">打开</system:String>
@@ -165,6 +166,17 @@
     <system:String x:Key="ProjectCreateFile">创建文件</system:String>
     <system:String x:Key="ProjectOpenFile">打开文件</system:String>
     <system:String x:Key="ProjectOpenExplorer">在文件浏览器中显示</system:String>
+
+    <system:String x:Key="StructureHeaderCommand">命令</system:String>
+    <system:String x:Key="StructureHeaderEvent">事件</system:String>
+    <system:String x:Key="StructureHeaderFunction">函数</system:String>
+    <system:String x:Key="StructureHeaderOptions">选项</system:String>
+    <system:String x:Key="StructureHeaderVars">变量</system:String>
+    <system:String x:Key="StructureHeaderStop">停止代码执行</system:String>
+    <system:String x:Key="StructureHeaderCancelEvent">取消事件</system:String>
+    <system:String x:Key="StructureHeaderLoop">循环</system:String>
+    <system:String x:Key="StructureHeaderIf">条件</system:String>
+    <system:String x:Key="StructureHeaderComment">注释</system:String>
 
     <!-- * 错误 * -->
 
