--- a/SkEditorPlus/Languages/English.xaml
+++ b/SkEditorPlus/Languages/English.xaml
@@ -9,6 +9,7 @@
     <system:String x:Key="MenuEdit">Edit</system:String>
     <system:String x:Key="MenuOther">Other</system:String>
     <system:String x:Key="MenuProject">Project</system:String>
+    <system:String x:Key="MenuStructure">Structure</system:String>
 
     <system:String x:Key="MenuFileNew">New</system:String>
     <system:String x:Key="MenuFileOpen">Open</system:String>
@@ -174,6 +175,17 @@
     <system:String x:Key="ProjectCreateFile">Create file</system:String>
     <system:String x:Key="ProjectOpenFile">Open file</system:String>
     <system:String x:Key="ProjectOpenExplorer">Show in file explorer</system:String>
+
+    <system:String x:Key="StructureHeaderCommand">Command</system:String>
+    <system:String x:Key="StructureHeaderEvent">Event</system:String>
+    <system:String x:Key="StructureHeaderFunction">Function</system:String>
+    <system:String x:Key="StructureHeaderOptions">Options</system:String>
+    <system:String x:Key="StructureHeaderVars">Variables</system:String>
+    <system:String x:Key="StructureHeaderStop">Stop code execution</system:String>
+    <system:String x:Key="StructureHeaderCancelEvent">Cancel event</system:String>
+    <system:String x:Key="StructureHeaderLoop">Loop</system:String>
+    <system:String x:Key="StructureHeaderIf">Condition</system:String>
+    <system:String x:Key="StructureHeaderComment">Comment</system:String>
 
     <!-- * Errors * -->
     <system:String x:Key="GUIGenNameError">Name of GUI is required!</system:String>
