--- a/SkEditorPlus/Languages/French.xaml
+++ b/SkEditorPlus/Languages/French.xaml
@@ -9,6 +9,7 @@
 	<system:String x:Key="MenuEdit">Modifier</system:String>
 	<system:String x:Key="MenuOther">Autre</system:String>
     <system:String x:Key="MenuProject">Projet</system:String>
+    <system:String x:Key="MenuStructure">Structure</system:String>
 
 	<system:String x:Key="MenuFileNew">Nouveau</system:String>
 	<system:String x:Key="MenuFileOpen">Ouvrir</system:String>
@@ -166,6 +167,17 @@
     <system:String x:Key="ProjectCreateFile">Créer un fichier</system:String>
     <system:String x:Key="ProjectOpenFile">Ouvrir un fichier</system:String>
     <system:String x:Key="ProjectOpenExplorer">Afficher dans l'explorateur de fichiers</system:String>
+
+    <system:String x:Key="StructureHeaderCommand">Commande</system:String>
+    <system:String x:Key="StructureHeaderEvent">Événement</system:String>
+    <system:String x:Key="StructureHeaderFunction">Fonction</system:String>
+    <system:String x:Key="StructureHeaderOptions">Options</system:String>
+    <system:String x:Key="StructureHeaderVars">Variables</system:String>
+    <system:String x:Key="StructureHeaderStop">Arrêter l'exécution du code</system:String>
+    <system:String x:Key="StructureHeaderCancelEvent">Annuler l'événement</system:String>
+    <system:String x:Key="StructureHeaderLoop">Boucle</system:String>
+    <system:String x:Key="StructureHeaderIf">Condition</system:String>
+    <system:String x:Key="StructureHeaderComment">Commentaire</system:String>
 
     <!-- * Erreurs * -->
 	<system:String x:Key="GUIGenNameError">Le nom de l'interface graphique est requis !</system:String>
