--- a/SkEditorPlus/Languages/Polski.xaml
+++ b/SkEditorPlus/Languages/Polski.xaml
@@ -9,6 +9,7 @@
     <system:String x:Key="MenuEdit">Edycja</system:String>
     <system:String x:Key="MenuOther">Inne</system:String>
     <system:String x:Key="MenuProject">Projekt</system:String>
+    <system:String x:Key="MenuStructure">Struktura</system:String>
 
     <system:String x:Key="MenuFileNew">Nowy</system:String>
     <system:String x:Key="MenuFileOpen">Otwórz</system:String>
@@ -165,6 +166,17 @@
     <system:String x:Key="ProjectCreateFile">Stwórz plik</system:String>
     <system:String x:Key="ProjectOpenFile">Otwórz plik</system:String>
     <system:String x:Key="ProjectOpenExplorer">Pokaż w eksploratorze plików</system:String>
+
+    <system:String x:Key="StructureHeaderCommand">Komenda</system:String>
+    <system:String x:Key="StructureHeaderEvent">Wydarzenie</system:String>
+    <system:String x:Key="StructureHeaderFunction">Funkcja</system:String>
+    <system:String x:Key="StructureHeaderOptions">Opcje</system:String>
+    <system:String x:Key="StructureHeaderVars">Zmienne</system:String>
+    <system:String x:Key="StructureHeaderStop">Zatrzymaj kod</system:String>
+    <system:String x:Key="StructureHeaderCancelEvent">Anuluj wydarzenie</system:String>
+    <system:String x:Key="StructureHeaderLoop">Pętla</system:String>
+    <system:String x:Key="StructureHeaderIf">Warunek</system:String>
+    <system:String x:Key="StructureHeaderComment">Komentarz</system:String>
 
     <!-- * Errors * -->
     <system:String x:Key="GUIGenNameError">Nazwa GUI jest wymagana!</system:String>
