--- a/SkEditorPlus/Languages/Russian.xaml
+++ b/SkEditorPlus/Languages/Russian.xaml
@@ -9,6 +9,7 @@
     <system:String x:Key="MenuEdit">Изменить</system:String>
     <system:String x:Key="MenuOther">Другое</system:String>
     <system:String x:Key="MenuProject">Проект</system:String>
+    <system:String x:Key="MenuStructure">Структура</system:String>
 
     <system:String x:Key="MenuFileNew">Создать</system:String>
     <system:String x:Key="MenuFileOpen">Открыть</system:String>
@@ -165,6 +166,17 @@
     <system:String x:Key="ProjectCreateFile">Создать файл</system:String>
     <system:String x:Key="ProjectOpenFile">Открыть файл</system:String>
     <system:String x:Key="ProjectOpenExplorer">Показать в файловом менеджере</system:String>
+
+    <system:String x:Key="StructureHeaderCommand">Команда</system:String>
+    <system:String x:Key="StructureHeaderEvent">Событие</system:String>
+    <system:String x:Key="StructureHeaderFunction">Функция</system:String>
+    <system:String x:Key="StructureHeaderOptions">Опции</system:String>
+    <system:String x:Key="StructureHeaderVars">Переменные</system:String>
+    <system:String x:Key="StructureHeaderStop">Остановить выполнение кода</system:String>
+    <system:String x:Key="StructureHeaderCancelEvent">Отменить событие</system:String>
+    <system:String x:Key="StructureHeaderLoop">Цикл</system:String>
+    <system:String x:Key="StructureHeaderIf">Условие</system:String>
+    <system:String x:Key="StructureHeaderComment">Комментарий</system:String>
 
     <!-- * Errors * -->
     <system:String x:Key="GUIGenNameError">Введите название GUI!</system:String>
